# eiio

./: .gitignore  ChangeLog  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
debian/: changelog  control  copyright
src/: Makefile.am  Makefile.in  config.h.in  eiio.c  eiio.h  eiio.pc.in  eiio_bitmap_handle.c  eiio_bmp.c  eiio_color.c  eiio_config.h  eiio_config_auto.h.in  eiio_config_msvc.h  eiio_ffmpeg.c  eiio_gif.c  eiio_internal.h  eiio_jpeg.c  eiio_png.c  libeiio-0.def
vcproj/: Makefile.am  Makefile.in  eiio.sln  eiio.vcproj  eiio.vcxproj  eiio.vcxproj.filters
